@@ -1,5 +1,8 @@
 Changes in libmpg123 libtool interface versions...
 
+44.0.44
+	- added mpg123_getformat2()
+
 43.0.43
 	- added MPG123_NO_PEEK_END and MPG123_FORCE_SEEKABLE
 
